@@ -24,10 +24,10 @@ import com.yammer.metrics.core.MetricsRegistry;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
 
@@ -40,7 +40,7 @@ public class ControllerMetadataMetricsTest {
         try {
             try (ControllerMetadataMetrics metrics = new ControllerMetadataMetrics(Optional.of(registry))) {
                 ControllerMetricsTestUtils.assertMetricsForTypeEqual(registry, "kafka.controller:",
-                    new HashSet<>(Arrays.asList(
+                    new HashSet<>(List.of(
                         "kafka.controller:type=KafkaController,name=ActiveBrokerCount",
                         "kafka.controller:type=KafkaController,name=FencedBrokerCount",
                         "kafka.controller:type=KafkaController,name=GlobalPartitionCount",
@@ -49,11 +49,12 @@ public class ControllerMetadataMetricsTest {
                         "kafka.controller:type=KafkaController,name=OfflinePartitionsCount",
                         "kafka.controller:type=KafkaController,name=PreferredReplicaImbalanceCount",
                         "kafka.controller:type=KafkaController,name=IgnoredStaticVoters",
-                        "kafka.controller:type=ControllerStats,name=UncleanLeaderElectionsPerSec"
+                        "kafka.controller:type=ControllerStats,name=UncleanLeaderElectionsPerSec",
+                        "kafka.controller:type=ControllerStats,name=ElectionFromEligibleLeaderReplicasPerSec"
                     )));
             }
             ControllerMetricsTestUtils.assertMetricsForTypeEqual(registry, "KafkaController",
-                    Collections.emptySet());
+                    Set.of());
         } finally {
             registry.shutdown();
         }
@@ -187,6 +188,22 @@ public class ControllerMetadataMetricsTest {
             assertEquals(0, UncleanLeaderElectionsPerSec.count());
             metrics.updateUncleanLeaderElection(2);
             assertEquals(2, UncleanLeaderElectionsPerSec.count());
+        } finally {
+            registry.shutdown();
+        }
+    }
+
+    @SuppressWarnings("LocalVariableName")
+    @Test
+    public void testUpdateElectionFromEligibleLeaderReplicasCount() {
+        MetricsRegistry registry = new MetricsRegistry();
+        try (ControllerMetadataMetrics metrics = new ControllerMetadataMetrics(Optional.of(registry))) {
+            Meter ElectionFromEligibleLeaderReplicasPerSec = (Meter) registry
+                .allMetrics()
+                .get(metricName("ControllerStats", "ElectionFromEligibleLeaderReplicasPerSec"));
+            assertEquals(0, ElectionFromEligibleLeaderReplicasPerSec.count());
+            metrics.updateElectionFromEligibleLeaderReplicasCount(2);
+            assertEquals(2, ElectionFromEligibleLeaderReplicasPerSec.count());
         } finally {
             registry.shutdown();
         }
